--- a/sdmcoletor/webapp/i18n/i18n.properties
+++ b/sdmcoletor/webapp/i18n/i18n.properties
@@ -47,17 +47,17 @@ objectTitle= MOV LPN
 #XTIT: Label for the lpn
 lpnLabel=Lpn
 #XTIT
-depositOrigemLabel=D.Org
+depositOrigemLabel=D.Ori
 #XTIT
 depositoDestinoLabel=D.Dst
 #XTIT
-posOrigLabel=P.Org
+posOrigLabel=P.Ori
 #XTIT
 quantLabel=Qtd
 #XTIT
 matLabel=Mat
 #XTIT
-lSDMLabel=L.SND
+lSDMLabel=L.SDM
 #XTIT
 DULabel=DU
 #XTIT
