RVC-envio 005 Ajustes Sucesso API

--- a/sdmcoletor/webapp/i18n/i18n.properties
+++ b/sdmcoletor/webapp/i18n/i18n.properties
@@ -97,3 +97,6 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+# webapp/i18n/i18n.properties  (idioma “padrão”, normalmente inglês)
+successTransferencia=Transfer posted successfully
