RVC novo micro 001.2

--- a/sdmcoletor/webapp/i18n/i18n.properties
+++ b/sdmcoletor/webapp/i18n/i18n.properties
@@ -100,3 +100,5 @@ errorText=Sorry, a technical error occurred! Please try again later.
 
 # webapp/i18n/i18n.properties  (idioma “padrão”, normalmente inglês)
 successTransferencia=Transfer posted successfully
+
+multipleErrorsText=Multiplos errores encontrados
